# APMLive

./: .coverage  .gitignore  CHANGELOG.md  IMPROVEMENT_PLAN.md  LICENSE  PERFORMANCE_REPORT.md  README.md  apm.py  apmlive.spec  pyproject.toml  requirements.txt  run_ci.ps1  version_info.txt
.github/workflows/: release.yml
src/: apmlive.py  app.manifest  main.py
src/core/: calculator.py  exporter.py
src/ui/: graph_widget.py  main_window.py  settings_window.py
src/utils/: config.py  logger.py
tests/: test_calculator.py  test_e2e_ui.py  test_exporter.py  test_logger.py  test_ui_integration.py
