[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apmlive"
version = "2.0.0"
description = "A real-time APM (Actions Per Minute) tracker for Windows."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pynput>=1.7.6",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
    "types-Pillow",
]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version",
    "src/app.manifest:version",
]
version_toml = [
    "pyproject.toml:project.version"
]
version_source = "tag"
commit_version_number = true
upload_to_pypi = false
upload_to_release = true
build_command = "pip install pyinstaller && pyinstaller apmlive.spec"
assets = ["dist/APMLive.exe"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = "test_*.py"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/ui/*",  # UI is hard to test in headless CI
    "src/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pynput.*",
    "matplotlib.*",
    "tkinter.*"
]
ignore_missing_imports = true
